--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,8 @@ project:
     - "*.qmd"
     - "!/labs/student/"
     - "!/videos/"
-
+    - "!/slides/"
+    
 website:
   page-navigation: true
   title: "Statistical Computing with R"
