adding lab 3 and peer activity 3

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,7 +63,9 @@ website:
           - href: labs/instructions/lab-1-instructions.qmd
             text: "Lab 1 & Challenge 1 Instructions"
           - href: labs/instructions/lab-2-instructions.qmd
-            text: "Lab 2 Instructions"          
+            text: "Lab 2 Instructions"
+          - href: labs/instructions/lab-3-instructions.qmd
+            text: "Lab 3 and Challenge 3 Instructions"
    
 
 format:
